samples/invalid/syntax/multiline_text.g
language g0

bad =
    """
    "missing required separator
    """
